force-app/main/default/objects/ProductOverview__c/ProductOverview__c.object-meta.xml
<CustomObject>
    <label>Product Overview</label>
    <nameField>
        <displayFormat>Product Overview {0000000}</displayFormat>
        <label>ProductOverview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>