force-app/main/default/objects/ProductOverview__c/fields/Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>List of Subscribtions under an account - related to this product only</description>
    <label>Account Subscription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__Subscription__c.SBQQ__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>SBQQ__Subscription__c.SBQQ__Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipName>ProductOverview</relationshipName>
    <type>Lookup</type>
</CustomField>