force-app/main/default/objects/ProductOverview__c/fields/Active_Subscripition_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscripition_Count__c</fullName>
    <label>Active Subscripition Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>