force-app/main/default/objects/ProductOverview__c/fields/Highest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Highest_Start_Date__c</fullName>
    <label>Highest End Date</label>
    <type>Date</type>
</CustomField>