force-app/main/default/objects/ProductOverview__c/fields/Lowest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Start_Date__c</fullName>
    <label>Lowest Start Date</label>
    <type>Date</type>
</CustomField>