force-app/main/default/objects/ProductOverview__c/fields/No_Of_Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Active_Subscriptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Active Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>