force-app/main/default/objects/ProductOverview__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <label>Product Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naturfagspakken</fullName>
            </value>
            <value>
                <fullName>Kulturfagspakken</fullName>
            </value>
            <value>
                <fullName>Sprogfagspakken</fullName>
            </value>
            <value>
                <fullName>Valfagspakken</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>