force-app/main/default/objects/ProductOverview__c/fields/Purchased_WF__c.field-meta.xml
<CustomField>
    <fullName>Purchased_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Purchased</label>
    <type>Checkbox</type>
</CustomField>