force-app/main/default/objects/ProductOverview__c/fields/Sum_of_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Subscription_Amount__c</fullName>
    <label>Sum of Subscription Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>