force-app/main/default/objects/ProductOverview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Account__c</columns>
    <columns>No_Of_Active_Subscriptions__c</columns>
    <columns>No_Of_Expired_Subscriptions__c</columns>
    <columns>Lowest_Start_Date__c</columns>
    <columns>Highest_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Kommunikationsskolan</value>
    </filters>
    <label>All</label>
</ListView>